[package]
name = "bit-iter"
version = "0.1.4" # remember to update html_root_url
authors = ["Christian Tamblyn <ctamblyn76@gmail.com>"]
edition = "2018"
description = "Iterate forward or backwards over the positions of set bits in a word."
license = "MIT"
documentation = "https://docs.rs/bit-iter"
repository = "https://github.com/ctamblyn/bit-iter"
keywords = ["bits", "flags", "iterator", "bit-twiddling"]
categories = ["algorithms", "no-std"]

[dependencies]
